# OpenFst

./: CMakeLists.txt  CMakeSettings.json  README  README.md
cmake/: FindCython.cmake  UseCython.cmake  UseCython_OLD.cmake
projects/examples/: CMakeLists.txt
projects/openfst/: CMakeLists.txt
projects/openfst_tt/: CMakeLists.txt
projects/openfstdll/: CMakeLists.txt
projects/test/: CMakeLists.txt
src/examples/: stdvectorfst.cc
src/include/fst/: accumulator.h  arc-map.h  bi-table.h  config.h  determinize.h  edit-fst.h  epsnormalize.h  equivalent.h  factor-weight.h  label-reachable.h  mapped-file.h  relabel.h  replace-util.h  replace.h  slist.h  sparse-tuple-weight.h  state-map.h  test-properties.h  types.h  util.h  vector-fst.h
src/lib/: mapped-file.cc
src/python/: CMakeLists.txt  README.md  openfst.pxd  openpyfst.cpp  openpyfst.pyx  setup.py  sym.pxd  util.pxd
src/python/Users/user/source/repos/openfst/OpenFst/src/python/: openpyfst.cp36-win_amd64.exp
src/script/: text-io.cc
src/test/: fst_test.cc  fst_test.h
